--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
 </head>
 
 <body>
-    <h1 class="center">Number Guessing Game</h1>
 
     <form action="" class="black-white">
-        <div class="divGame frame">
-            <h2 class="center">In how many rounds you think you can guess the number?</h2>
 
-            <div id="divGameSetup" class="divGameSetup">
+        <h1 class="center headline">Number Guessing Game</h1>
+
+        <div class="divGame frame">
+
+            <!--  -->
+            <div id="divGameSetup" class="divGameSetup grid">
+                <h2 class="center headline">In how many rounds you think you can guess the number?</h2>
 
                 <!-- Ordinary game setup -->
-                <p><input type="radio" name="radioTries" id="radioTries4" checked content="hallo"
-                        onchange="radioCustomChecked()">&nbsp;4</p>
-                <p><input type="radio" name="radioTries" id="radioTries5" onchange="radioCustomChecked()">&nbsp;5</p>
-                <p><input type="radio" name="radioTries" id="radioTries6" onchange="radioCustomChecked()">&nbsp;6</p>
-                <p><input type="radio" name="radioTries" id="radioCustom" onchange="radioCustomChecked()">&nbsp;<span
-                        id="lblCustomTries">Custom Game</span></p>
-
+                <p><input type="radio" name="radioTries" id="radioTries4" onchange="radioCustomChecked()" checked>
+                    &nbsp;4</p>
+                <p><input type="radio" name="radioTries" id="radioTries5" onchange="radioCustomChecked()">
+                    &nbsp;5</p>
+                <p><input type="radio" name="radioTries" id="radioTries6" onchange="radioCustomChecked()">
+                    &nbsp;6</p>
+                <p><input type="radio" name="radioTries" id="radioCustom" onchange="radioCustomChecked()">
+                    &nbsp;<span id="lblCustomTries">Custom Game</span></p>
 
                 <!-- Extended game setup for the people who want more -->
                 <div id="divGameCustom" class="divGameSetupCustom grid">
@@ -39,32 +43,27 @@
                         placeholder="max number">
                 </div>
 
-
-                <!-- Extended game setup for the people who want more -->
+                <!-- finally the button to start the game -->
                 <input type="button" value="Start Game" onclick="startGame()">
 
             </div>
 
+            <!--  -->
             <div id="divGameActive" class="divGameActive center hidden">
+                <h2 class="center">Game has started! Good luck!</h2>
                 <p id="gameProgress" class="h1">Try 0 of 10</p>
                 <input type="button" value="Give Up" onclick="surrender()">
             </div>
         </div>
 
         <!--  -->
-        <div id="divGamePlay" class="frame center">
-            <h2>Your Number</h2>
-            <input type="number" name="numGuess" id="numGuess" min="1" max="100" placeholder="Guess"
-                onchange="guessNumber()">
-            <div>
-                <input type="button" value="Try It" onclick="guessNumber()">
-            </div>
-
-
+        <div id="divGamePlay" class="divGamePlay frame hidden">
+            <input type="number" name="numGuess" id="numGuess" min="1" max="100" placeholder="Number">
+            <input type="button" value="Guess" onclick="guessNumber()">
         </div>
 
         <!--  -->
-        <div id="divGameHints" class="hidden scroll">
+        <div id="divGameHints" class="divGameHints hidden scroll">
 
         </div>
     </form>
