--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <!--  -->
             <div id="divGameActive" class="divGameActive center hidden">
                 <h2 class="center">Game has started! Good luck!</h2>
-                <p id="gameProgress" class="h1">Try 0 of 10</p>
-                <input type="button" value="Give Up" onclick="surrender()">
+                <p id="lblGameProgress" class="h1">Try 0 of 10</p>
+                <input type="button" value="Give Up" onclick="playerSurrenders()">
             </div>
         </div>
 
@@ -63,7 +63,7 @@
         </div>
 
         <!--  -->
-        <div id="divGameHints" class="divGameHints hidden scroll">
+        <div id="divGameHints" class="divGameHints frame center scroll hidden">
 
         </div>
     </form>
