--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         -->
         <section id="gamePlay" class="gamePlay collapsed">
 
-            <!--  -->
+            <!-- game show game progress and a chance to give up -->
             <div class="gamePlayActive">
 
                 <h2>Game has started!<br>Good luck!</h2>
